--- a/CobroCoactivo/web/paginas/gestionExpedientes/gestionExpedientes.xhtml
+++ b/CobroCoactivo/web/paginas/gestionExpedientes/gestionExpedientes.xhtml
@@ -68,7 +68,7 @@
                             </ol>
                         </section>
                         <section class="content">
-                            <p:messages autoUpdate="true" id="mensajeExpediente" showIcon="false" closable="true" severity="error,warn,info,fatal"></p:messages>
+                            <p:messages closable="true" autoUpdate="true" id="messageGeneral" showDetail="true" />
                             <div class="box box-danger">
                                 <div class="box-header with-border">
                                     <h3 class="box-title">Busquedas</h3>
