--- a/CobroCoactivo/web/paginas/gestionDeudas/gestionClasificacionDeudas.xhtml
+++ b/CobroCoactivo/web/paginas/gestionDeudas/gestionClasificacionDeudas.xhtml
@@ -26,7 +26,7 @@
                         <section class="content" >
                             <div jsf:id="contenedor">
                                 <div class="col-md-12">
-                                    <p:messages autoUpdate="true" id="mensajeConsultarDeudasClasificacion" showIcon="false" closable="true"></p:messages>
+                                    <p:messages autoUpdate="true" id="mensajeConsultarDeudasClasificacion" showDetail="true"  closable="true"/>
                                     <h:panelGrid id="pnlBusquedaDeuda" class="col-lg-12" >
                                         <h:panelGroup >
                                             <!-- Default box -->
@@ -60,7 +60,7 @@
                                                                             </div>
                                                                             <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
                                                                                 <div class="input-group margin-5">
-                                                                                    <h:inputText class="form-control text-uppercase" id="txtReferencia" value="#{gestionDeudasBean.referenciaDeuda}">
+                                                                                    <h:inputText class="form-control text-uppercase" id="txtReferencia" value="#{gestionDeudasBean.referenciaDeuda}"  required="true" requiredMessage="Digite la referencia">
                                                                                     </h:inputText>
                                                                                     <span class="input-group-btn">
                                                                                         <h:commandLink class="btn btn-info btn-danger" value="Buscar">
