--- a/CobroCoactivo/web/paginas/gestionExpedientes/solicitudExpedientes.xhtml
+++ b/CobroCoactivo/web/paginas/gestionExpedientes/solicitudExpedientes.xhtml
@@ -25,7 +25,7 @@
                             </ol>
                         </section>
                         <section class="content">
-                            <p:messages autoUpdate="true" id="mensajeSolicitud" showIcon="false" closable="true" severity="error,warn,info,fatal"></p:messages>
+                            <p:messages closable="true" autoUpdate="true" id="messageGeneral" showDetail="true" />
                             <div class="box box-danger">
                                 <div class="box-header with-border col-lg-6">
                                     <h3 class="box-title">Busquedas</h3>
@@ -49,10 +49,12 @@
                                                             </div>
                                                             <div class="col-lg-4">
                                                                 <div class="input-group margin-1">
-                                                                    <h:inputText class="form-control text-uppercase" maxlength="20" a:placeholder="Digite la referencia del expediente" id="txtReferencia" value="#{gestionExpedientesBean.referenciaExpediente}" required="true" requiredMessage="Digite el nombre del expediente"></h:inputText>
+                                                                    <h:inputText class="form-control text-uppercase" maxlength="20" a:placeholder="Digite la referencia del expediente" 
+                                                                                 id="txtReferencia" value="#{gestionExpedientesBean.referenciaExpediente}" required="true" requiredMessage="Digite el nombre del expediente."></h:inputText>
                                                                     <span class="input-group-btn">
                                                                         <h:commandLink class="btn btn-danger" value="Buscar">
-                                                                            <f:ajax event="click" listener="#{gestionExpedientesBean.buscarExpedientes(1)}" execute="frmSolicitudExpedientes:txtReferencia" render="frmSolicitudExpedientes:pnlCarpeta frmSolicitudExpedientes:pnlSubCarpetas"/>
+                                                                            <f:ajax event="click" listener="#{gestionExpedientesBean.buscarExpedientes(1)}" execute="frmSolicitudExpedientes:txtReferencia" 
+                                                                                    render="frmSolicitudExpedientes:pnlCarpeta frmSolicitudExpedientes:pnlSubCarpetas"/>
                                                                         </h:commandLink>
                                                                     </span>
                                                                 </div>
