--- a/CobroCoactivo/web/paginas/gestionExpedientes/solicitudesExpedientes.xhtml
+++ b/CobroCoactivo/web/paginas/gestionExpedientes/solicitudesExpedientes.xhtml
@@ -29,7 +29,7 @@
                                 <h:commandLink class="btn btn-success" value="Recibir Expedientes" action="recibirExpedientes.xhtml">
                                 </h:commandLink>
                             </div>
-                            <p:messages autoUpdate="true" id="mensaje" showIcon="false" closable="true" severity="error,warn,info,fatal"></p:messages>
+                            <p:messages closable="true" autoUpdate="true" id="messageGeneral" showDetail="true" />
                             <div class="box box-danger">
                                 <div class="box-body">
                                     <table id="table" class="table table-hover" >
