--- a/CobroCoactivo/web/paginas/gestionMovimientos/gestionMovimientos.xhtml
+++ b/CobroCoactivo/web/paginas/gestionMovimientos/gestionMovimientos.xhtml
@@ -26,7 +26,7 @@
                             </ol>
                         </section>
                         <section class="content">
-                            <p:messages closable="true" autoUpdate="true" id="msggeneral2" showDetail="false" />
+                            <p:messages closable="true" autoUpdate="true" id="messageGeneral" showDetail="true" />
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="box box-danger">
