--- a/CobroCoactivo/web/paginas/gestionPersonas/detallePersona.xhtml
+++ b/CobroCoactivo/web/paginas/gestionPersonas/detallePersona.xhtml
@@ -12,7 +12,7 @@
             <div class="content-wrapper">
                 <h:outputText value="#{gestionPersonaBean.encabezadoDetallePersona}" escape="false"></h:outputText>
                 <section class="content">
-                    <p:messages autoUpdate="true" id="mensajeDetallePersona" showIcon="false" closable="true" severity="error,info"></p:messages>
+                    <p:messages closable="true" autoUpdate="true" id="messageGeneral" showDetail="true" />
                     <div class="box box-danger">
                         <div class="box-body box-danger">
                             <div class="box-header with-border">
