--- a/CobroCoactivo/web/paginas/gestionPlanes/gestionPlanTrabajo.xhtml
+++ b/CobroCoactivo/web/paginas/gestionPlanes/gestionPlanTrabajo.xhtml
@@ -26,7 +26,7 @@
                     <section class="content">
                         <h:form id="formPlanTrabajo" enctype="multipart/form-data">
                             <div class="row" jsf:id="contenedor">
-                                <p:messages severity="info,warn"  closable="true" id="planTrabajo" showDetail="false"  showIcon="false" />
+                                <p:messages closable="true" autoUpdate="true" id="messageGeneral" showDetail="true" />
                                 <div class="col-md-3">
                                     <div class="box" style="border-top-color: #{gestionPlanTrabajoBean.planTrabajos.color}">
                                         <div class="box-header with-border">
