--- a/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
+++ b/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
@@ -26,7 +26,7 @@
                             </ol>
                         </section>
                         <section class="content">
-                            <p:messages autoUpdate="true" id="mensajeConsultarUsuarios" showIcon="false" closable="true" severity="error,warn,info"></p:messages>
+                            <p:messages closable="true" autoUpdate="true" id="messageGeneral" showDetail="true" />
                             <div class="box box-danger">
                                 <div class="box-header with-border">
                                     <h3 class="box-title">Busquedas</h3>
